<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userIDTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/name"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titlePayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/debitCredit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            app:boxCornerRadiusBottomEnd="0dp"
            app:boxCornerRadiusTopEnd="0dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/editDebitCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-1dp"
            android:layout_weight="0.6"
            android:hint="@string/value"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="0dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="0dp"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_value"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dataField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:hint="@string/data"
        app:endIconDrawable="@drawable/ic_bx_calendar"
        app:endIconMode="custom"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dataEditField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>